used grid container and have things remotely in the correct location, but spacing is off

--- a/style.css
+++ b/style.css
@@ -28,9 +28,9 @@ body {
   margin: 0 auto;
 }
 .calculator {
-  /* display: grid;
+  display: grid;
   grid-template-columns: repeat(7, 1fr);
-  grid-template-rows: repeat(5, 1fr); */
+  grid-template-rows: repeat(5, 1fr);
   border: 5px solid green;
 
   background-color: aquamarine;
@@ -56,61 +56,73 @@ h1 {
   font-size: 46px;
 }
 label {
-  font-size: 30px;
+  font-size: 25px;
 }
 input {
-  height: 12%;
+  height: 50%;
 }
 button {
-  height: 12%;
-  width: 15%;
+  height: 40%;
+  width: 95%;
   font-size: 20px;
 }
 #reset {
-  height: 12%;
-  width: 28%;
-  font-size: 20px;
+  height: 36%;
+  width: 60%;
+  font-size: 24px;
 }
 #result {
   display: inline-block;
   border: solid 5px black;
-  height: 12%;
-  width: 50%;
+  height: 40%;
+  width: 100%;
+}
+#first-number-label {
+  grid-column: 2/5;
+  grid-row: 1/2;
 }
 
-/* #first-number-label {
-  grid-area: first;
-}
 #first-Number {
-  grid-area: num1;
+  grid-column: 5/7;
+  grid-row: 1/2;
 }
 #second-number-label {
-  grid-area: second;
+  grid-column: 2/5;
+  grid-row: 3/4;
 }
 #second-Number {
-  grid-area: num2;
+  grid-column: 5/7;
+  grid-row: 3/4;
 }
 #addition {
-  grid-area: add;
+  grid-column: 2/3;
+  grid-row: 2/3;
 }
 #subtraction {
-  grid-area: sub;
+  grid-column: 3/4;
+  grid-row: 2/3;
 }
 #multiplication {
-  grid-area: mult;
+  grid-column: 4/5;
+  grid-row: 2/3;
 }
 #division {
-  grid-area: div;
+  grid-column: 5/6;
+  grid-row: 2/3;
 }
 #modulus {
-  grid-area: mod;
+  grid-column: 6/7;
+  grid-row: 2/3;
 }
 #equals {
-  grid-area: equals;
+  grid-column: 2/3;
+  grid-row: 4/5;
 }
 #result {
-  grid-area: results;
+  grid-column: 4/7;
+  grid-row: 4/5;
 }
 #reset {
-  grid-area: reset;
-} */
+  grid-column: 3/7;
+  grid-row: 5/6;
+}
